# FachuanHybridSystem

./: .dmypy.json  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_CHANGELOG.md  DOCKER_QUICKSTART.md  INSTALL.md  INTRO.md  LICENSE  README.md  README_EN.md  UPDATE.md  __init__.py  docker-compose.dev.yml  docker-compose.yml  litigation_ai_errors.txt  mypy_output.txt  opencode.json  pytest.ini  scraper_errors.txt  sitecustomize.py
backend/: .coverage.MacBookPro.pid25565.XUZmVZ4x  .coverage.MacBookPro.pid32398.XOYHxArx  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  P0_CHECKPOINT_REPORT.md  P0_CONSERVATIVE_FIX_FINAL_REPORT.md  P0_CONSERVATIVE_SUMMARY.md  P0_TYPE_ARG_FIX_REPORT.md  README.md  apps_mypy_errors.txt  arg_type_errors_report.txt  conftest.py  custom-entrypoint.sh  docker-entrypoint.sh  mcp_run.sh  mypy.ini  mypy_after_fix.txt  mypy_current_errors.txt  mypy_errors.txt  mypy_full_output.txt  mypy_output.txt  mypy_p0_checkpoint.txt  name_defined_errors_report.md  no_any_return_analysis.txt  no_any_return_complex_fix_summary.md  no_any_return_fix_report.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff.toml  test_failures_tmp.txt  test_format_e2e.py  test_stealth.py
backend/.mypy_reports/: README.md  TASK_24_SUMMARY.md  analyze_cases_errors.py  analyze_core_config_errors.py  attr_defined_analysis.txt  attr_defined_errors.txt  automation_mypy_result.txt  automation_submodules_scan_report.md  cases_errors.txt  cases_errors_after_fix.txt  cases_errors_analysis.md  cases_errors_current.txt  cases_errors_full.txt  cases_errors_new.txt  cases_errors_only.txt  cases_errors_summary.txt  cases_errors_v2.txt  cases_final_errors.txt  cases_mypy_result.txt  contracts_errors.txt  contracts_errors_analysis.md  contracts_errors_analysis.txt  contracts_errors_new.txt  contracts_errors_only.txt  contracts_fix_summary.md  contracts_mypy_errors.txt  core_config_error_analysis.md  core_config_errors.txt  core_config_errors_after_fix.txt  core_config_errors_after_task62.txt  core_config_errors_task5.txt  core_config_fix_summary.md  core_infrastructure_errors.txt  core_infrastructure_errors_only.txt  core_infrastructure_final.txt  core_mypy_errors.txt  core_mypy_task_7_3_report.md  document_delivery_errors.txt  document_delivery_errors_18_3.txt  document_delivery_errors_after_18_3.txt  (+65 more)
backend/.playwright-cli/: page-2026-03-24T00-51-02-135Z.yml
backend/apiSystem/: check_config.py  db.sqlite3-shm  db.sqlite3-wal  manage.py
backend/apps/: __init__.py
backend/constraints/: py312.txt
backend/cov_annotate/: z_a94b8e7c2be4df89_text_parser.py,cover
backend/cov_annotate2/: z_a94b8e7c2be4df89_text_parser.py,cover
backend/devtools/: contract_inventory.py  privacy_review.py  refactor_score.py  security_guard.py
backend/docs/: README.md
backend/mcp_server/: client.py  server.py
backend/plugins/: __init__.py
backend/scripts/: README.md  USERSCRIPT_GUIDE.md  add_id_manual.py  add_id_simple.py  add_id_to_models.py  (+70 more)
(+6374 files in other folders)
